force-app/main/default/objects/Trigger_Config_Runtime__c/Trigger_Config_Runtime__c.object-meta.xml
<CustomObject>
    <label>Trigger Config Runtime</label>
    <pluralLabel>Trigger Config Runtimes</pluralLabel>
    <nameField>
        <label>Trigger Config Runtime Name</label>
        <type>AutoNumber</type>
        <displayFormat>TC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>