force-app/main/default/objects/Trigger_Config_Runtime__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Insert</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Before Update</fullName>
            </value>
            <value>
                <fullName>Before Delete</fullName>
            </value>
            <value>
                <fullName>After Insert</fullName>
            </value>
            <value>
                <fullName>After Update</fullName>
            </value>
            <value>
                <fullName>After Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>