force-app/main/default/objects/Trigger_Config_Runtime__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>