force-app/main/default/objects/Trigger_Config_Runtime__c/fields/Trigger_Order__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Order__c</fullName>
    <label>Trigger Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>